add warning notice about GS blocking queries from this script

--- a/Recommender Based on Authors.ipynb
+++ b/Recommender Based on Authors.ipynb
@@ -15,6 +15,10 @@
       "\n",
       "Fetch and fingerprint some article and look for articles on Google Scholar that are similar to this one.\n",
       "\n",
+      "***Google Scholar doesn't seem to like the way we form queries in this notebook and will block you after a view queries. I'll update this notebook to use some other search engine or proper API.***\n",
+      "\n",
+      "***Until then, it's probably best not to evaluate this notebook on your machine.***\n",
+      "\n",
       "For simplicity, let's look for articles that were written by the same authors.\n",
       "\n",
       "Let's also assume that articles are more relevant for us if they were co-authored by a greater subset of authors of the original paper."
